Avoid images from overflowing width

--- a/public/app.css
+++ b/public/app.css
@@ -1,4 +1,5 @@
 body { color: #000; font-family: sans-serif; font-size: 14px; margin: 0 auto; padding: 0; max-width: 500px; line-height: 1.5; }
+img { max-width: 100%; }
 a.preprocessor { float: right; padding: 4px; }
 h1 { font-size: 16px; margin: 0 0 4px 0; padding: 4px; }
 h1 #date { font-weight: normal; font-size: 14px; }
